gameboard, player and obstacles are done and functional

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>Beer-Run</title>
 </head>
 <body>
-   <!-- <Style type='text/css' >body{background-color:rgb(0,0,0);background-image:url(http://www.zingerbugimages.com/backgrounds/blue_sand_stone.jpg);background-position:top left;background-repeat:repeat;background-attachment:fixed;}</Style>
-   -->
+   <Style type='text/css' >body{background-color:rgb(0,0,0);background-image:url(http://www.zingerbugimages.com/backgrounds/blue_sand_stone.jpg);background-position:top left;background-repeat:repeat;background-attachment:fixed;}</Style>
+
     <div id="center">
         <h1> BEER - RUN </h1>
     </div>
